60-minio-kustomize/production/patch-resource-limit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  template:
    spec:
      containers:
        - name: minio-server
          resources:
            limits:
              cpu: 500m
              memory: 600Mi
            requests:
              cpu: 10m
              memory: 150Mi
