60-minio-kustomize/production/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
  tls:
    - hosts:
        - stor.python.d53.cz
      secretName: minio-certificate
  rules:
  - host: stor.python.d53.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
